--- a/graffiti/src/main/res/drawable/graffiti_btn_effect_round0.xml
+++ b/graffiti/src/main/res/drawable/graffiti_btn_effect_round0.xml
@@ -16,9 +16,8 @@
 -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@drawable/presspen" />
-    <item android:state_selected="true" android:drawable="@drawable/presspen"/>
-
-    <item android:drawable="@android:color/transparent" />
+    <item android:state_pressed="true" android:drawable="@drawable/graffiti_shape_circle_pressed" />
+    <item android:state_selected="true" android:drawable="@drawable/graffiti_shape_circle_pressed"/>
+    <item android:drawable="@drawable/graffiti_shape_circle_normal" />
 </selector>
 
