--- a/graffiti/src/main/res/layout/layout_graffiti.xml
+++ b/graffiti/src/main/res/layout/layout_graffiti.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/bg_paintboard3"
+    android:background="@drawable/bg_paintboard4"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
@@ -757,9 +757,9 @@
                 <!--@drawable/graffiti_btn_effect_round-->
                 <Button
                     android:id="@+id/btn_hand_write"
-                    android:layout_width="50dp"
-                    android:layout_height="28dp"
-                    android:background="@android:color/transparent"
+                    android:layout_width="43dp"
+                    android:layout_height="42dp"
+                    android:background="@drawable/btn_effect_pen"
                     android:scaleType="centerCrop"
                     android:visibility="visible"
                     />
@@ -785,9 +785,9 @@
                 <Button
                     android:id="@+id/btn_line"
                     android:layout_width="50dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="22dp"
-                    android:background="@android:color/transparent"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="14dp"
+                    android:background="@drawable/btn_effect_line"
                     android:scaleType="centerCrop"
                     android:visibility="visible"
                    />
@@ -811,10 +811,10 @@
 
                 <Button
                     android:id="@+id/btn_fill_rect"
-                    android:layout_width="50dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="28dp"
-                    android:background="@android:color/transparent"
+                    android:layout_width="43dp"
+                    android:layout_height="42dp"
+                    android:layout_marginTop="18dp"
+                    android:background="@drawable/btn_effect_building"
                     android:scaleType="centerCrop"
                     android:visibility="visible"
                   />
@@ -824,10 +824,10 @@
 
                 <Button
                     android:id="@+id/btn_cityscapes"
-                    android:layout_width="50dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@android:color/transparent"
+                    android:layout_width="43dp"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="14dp"
+                    android:background="@drawable/btn_effect_city"
                     android:scaleType="centerCrop"
                     android:visibility="visible"
                   />
@@ -837,10 +837,10 @@
 
                 <Button
                     android:id="@+id/btn_bag"
-                    android:layout_width="50dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@android:color/transparent"
+                    android:layout_width="48dp"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/btn_effect_bag"
                     android:scaleType="centerCrop"
                     android:visibility="visible"
                     />
@@ -850,10 +850,10 @@
 
                 <Button
                     android:id="@+id/btn_shoes"
-                    android:layout_width="50dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="30dp"
-                    android:background="@android:color/transparent"
+                    android:layout_width="46dp"
+                    android:layout_height="44dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/btn_effect_shoes"
                     android:scaleType="centerCrop"
                     android:visibility="visible"
                    />
@@ -868,9 +868,9 @@
                 <Button
                     android:id="@+id/btn_clear"
                     android:layout_width="50dp"
-                    android:layout_height="28dp"
-                    android:layout_marginTop="90dp"
-                    android:background="@android:color/transparent"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="70dp"
+                    android:background="@drawable/btn_effect_clear"
                     android:scaleType="centerCrop"
                     />
                 <!--  android:text="清屏"
@@ -881,19 +881,16 @@
 
         <Button
             android:id="@+id/btn_test"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignTop="@+id/ll_showimage"
-            android:layout_marginRight="7dp"
-            android:layout_marginTop="7dp"
-            android:layout_toEndOf="@+id/ll_showimage"
-            android:layout_toRightOf="@+id/ll_showimage"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
             android:background="@android:color/transparent"
             android:scaleType="centerCrop"
             android:visibility="visible"
-       />
+            android:layout_alignParentBottom="true"
+            android:layout_toRightOf="@+id/graffiti_panel"
+            android:layout_toEndOf="@+id/graffiti_panel"
+            android:paddingRight="2dp"
+            android:layout_marginBottom="31dp" />
         <!--  android:text="生成测试"
             android:textColor="#000000"
             android:textSize="10dp"-->
